[tool.poetry]
name = "alfred-pyflow"
description = "Minimal library for the development of Alfred Workflows."
documentation = "https://github.com/fedecalendino/alfred-pyflow/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-pyflow"
license = "MIT"
readme = "README.md"
version = "0.4.7"

authors = [
  "Fede Calendino <fede@calendino.com>",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "alfred",
  "workflow",
]
packages = [
  { include = "pyflow" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.30.0"
urllib3 = "2.2.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
coverage = "^7.5.1"
ddt = "^1.7.2"

[tool.black]
line-length = 150

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
